docs: humanize survivors, fix links, plain-ASCII sweep
- Refresh architecture.md + wiki to the as-shipped v1 reality (single
  region-local sharded Raft, Java 25, ZGC, 15 shipped modules); drop the
  rejected multi-region hierarchy.
- Humanize the operator docs; repoint moved links to archive/ and adr/;
  add the auth cross-identity caveat and N>1 tuning to deployer-must-know.
- ADR link + residue hygiene across all 48 records (dangling refs to
  deleted scaffolding prose-ified; session/gate labels stripped).
- Rewrite the top-level README as an honest front door with a doc map.
- Plain-ASCII sweep across the humanize-target docs (1889 chars) and RFC
  link-path fixes; archive kept frozen as evidence.